@@ -15,6 +15,8 @@
   * RDoc now properly converts to the expected output encoding.  RubyForge bug
     #28791 by Dzmitry Prakapenka.
   * Restored parsing of block comments.  RubyForge bug #28668 by Stefano Crocco.
+  * Metaprogrammed methods defined with blocks no longer confuse the ruby
+    parser.  RubyForge bug #28370 by Erik Hollensbe.
 
 === 3.2 / 2010-12-29
 
